# degas

./: .gitignore  README.md  pyproject.toml  setup.py
assets/: generate_colormap_figure.py
degas/: __init__.py  degas.py  vernalis.py
degas/colormaps/: __init__.py  acton.py  bam.py  bamO.py  bamako.py  batlow.py  batlowK.py  batlowW.py  berlin.py  bilbao.py  broc.py  brocO.py  buda.py  bukavu.py  cork.py  corkO.py  davos.py  devon.py  fes.py  glasgow.py  grayC.py  hawaii.py  imola.py  lajolla.py  lapaz.py  lipari.py  lisbon.py  managua.py  navia.py  naviaW.py  nuuk.py  oleron.py  oslo.py  roma.py  romaO.py  tofino.py  tokyo.py  turku.py  vanimo.py  vernalis.py  (+2 more)
degas/styles/: default.mplstyle  degas_figure.mplstyle  pastel_rainbow.mplstyle
